--- a/TestClient/App.config
+++ b/TestClient/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	
+	<appSettings>
+		<add key="ip" value="172.18.136.183"/>
+		<add key="user" value="avinash"/>
+		<add key="path" value="C:\D\Development\Mavenir\my-ssh-keys\ubuntu-local-privatekey.txt"/>
+	</appSettings>
+	
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
