adding clean session log to remove console color codes and convert file to linux format,

--- a/TestClient/App.config
+++ b/TestClient/App.config
@@ -2,8 +2,9 @@
 <configuration>
 	
 	<appSettings>
-		<add key="ip" value="172.18.136.183"/>
+		<add key="ip" value="172.21.177.68"/>
 		<add key="user" value="avinash"/>
+		<add key="password" value="aloha20"/>
 		<add key="path" value="C:\D\Development\Mavenir\my-ssh-keys\ubuntu-local-privatekey.txt"/>
 	</appSettings>
 	
